# xsearchs-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  restart.sh
chat/: config.py  main.py
chat/agent/: deep_research_agent_factory.py  holographic_memory.py  model_factory.py  react_agent_factory.py  user_memory.py
chat/agent/deep_research/: deep_research_agent.py  utils.py
chat/session/: __init__.py  message_store.py
config/: __init__.py
data/: .env.example  config.yaml
data/templates/: agent-generator.md  deep-research-agent.md  payment-system-architect.md  simple-react-agent.md
manage/: __init__.py  auth.py  database.py  main.py  nacos_client.py
manage/routes/: __init__.py  agent_template_routes.py  auth_routes.py  session_routes.py  user_routes.py
src/: main.py
src/agent/: model_factory.py  react_agent_factory.py
src/session/: __init__.py  message_store.py
web-ui/: PLAN.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web-ui-v2/: index.html  package-lock.json  vite.config.ts
web-ui-v2/src/api/: sessions.ts  users.ts
web-ui-v2/src/components/: AdminPanel.tsx  ChangePasswordModal.tsx  ChatArea.tsx  SetPasswordPage.tsx
web-ui-v2/src/hooks/: useChatStream.ts
web-ui/data/: memory.db
web-ui/src/: App.tsx  main.tsx
web-ui/src/api/: auth.ts  sessions.ts  users.ts
web-ui/src/components/: AdminPanel.tsx  ChangePasswordModal.tsx  ChatApp.tsx  ChatArea.tsx  ChatInput.tsx  ChatLayout.tsx  LoginPage.tsx  MessageBubble.tsx  MessageList.tsx  SetPasswordPage.tsx  Sidebar.tsx  TemplateManager.tsx  WelcomeScreen.tsx
(+10 files in other folders)
